fix font size on mobile devices

--- a/src/app/chain-detail-page/summary/summary.component.css
+++ b/src/app/chain-detail-page/summary/summary.component.css
@@ -86,3 +86,9 @@
   font-size: 20px;
   margin-top: 150px;
 }
+
+@media (max-width: 500px) {
+  .charts .title {
+    font-size: 18px;
+  }
+}
